--- a/3.html
+++ b/3.html
@@ -4,6 +4,15 @@
 <head>
     <title>WEB1 - JavaScript</title>
     <meta charset="utf-8">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9XLE16Q7TF"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9XLE16Q7TF');
+    </script>
 </head>
 
 <body>
